--- a/README
+++ b/README
@@ -1,19 +1,18 @@
-GUISDAP 8.1
+GUISDAP 8.2
 
-This release is essentially version 1.81, but since the layout have changed
-by going to anal and init directories, we have chosen to remove the "1"
-from the version number. Also there are already a couple of "vs 2."
-releases which are from a different tree, so by making a jump like this
-these should be easier kept apart.
+This release of guisdap contains several new features and bugfixes,
+but users everything is made compatible with older versions (hopefully).
+It has been developed and tested using Matlab 6.5, so there may (or may
+not) be some problems with older Matlab versions.
 
-INSTALL
-Guisdap-8.1 should be a lot more easy to install than previous versions.
-It has been succesfully installed on solaris (Forte 6.2) and linux (gcc 3).
-For solaris there are some problems with <matlab6.5 and Forte7, so try to
-avoid those. Other architectures may have to change the makefiles.
-Guisdap itself have been made as little unix-dependent as possible and
-might run even on PC-windows. Please report any changes needed for other
-systems.
+
+Installing
+
+Guisdap-8.2 is somewhat easier to install than the previous version.
+It has been succesfully installed on Solaris (Forte 7) and linux (gcc 3).
+Other architectures may have to change the makefiles, if you want speed,
+othervise it should run without the compiled routines.
+Please report any changes needed for other systems.
 
 untar the distribution at your favourite place
 cd into the guisdap directory
@@ -25,15 +24,19 @@ if you want the speed improvements the mex utility provides:
  "make" and "make install"
  cd ../../mexsources
  "make"
-othervise things are almost the same (but slower)
-make a link of /.../guisdap/bin/guisdap into a place on
-   your path (ex /usr/local/bin)
-Provided are also a searchpath to $HOME/gup/mygup/ into which your personal
+make a link of bin/guisdap to a place on your path (ex /usr/local/bin)
+
+Integration of historic KST data is done using the Nigel Wade integration
+package which you have to install separately. Provided are paths to
+NW/mex6 for the mex files and NW/lib for the libraries.
+
+Provided are also a searchpath to ~/gup/mygup where your personal
 files should go.
+
 
 Running
 
-Running analysis is also a lot simplier.
+Running analysis is simplier than before.
 At the prompt, type "guisdap --help" to see all the switches available.
 Normal analysis is done running "guisdap -a" which will bring up a
 window with some entries to fill in. (Hopefully selfexplained)
@@ -43,21 +46,40 @@ As usual, you are on your own initialising experiments. If someone writes
 or have a manual for this, I gladly debug and include it. In any case,
 the initialisation scripts are avaiable with "guisdap -i".
 
+
 New features
 
--Fitting is done on the logs of the parameters instead of the parameters
- themselves to aviod any normalisation factors (d(log(N))=dN/N).
--The famous "vizu" plotting are included.
--Integration is done best using the Nigel Wade integration package, but
- the built-in integration have been improved to screen on antenna and
- transmitter status.
--The latest changes on the parameter block is taken into account.
--"Forcing" parameters is made easier by the "f_" switch (ex. f_ch_Pt=1e6;
- forces the tx power to 1MW)
--NCAR results files are switched on by NCAR=1,2,3 (bitpattern: 1=ascii,
- 2=binary)
--The IRI and MSIS models are included as the interfaces depends on the
- model verions
--Numerous hidden improvements and refinements
+-The built-in integration have been improved with a satellite
+ checking routine (normally disabled) ignoring dumps flagged to contain
+ point targets. See anal/satch.m for controlling parameters.
+-An alternate way of measuring variances on the data has been developed,
+ making it possible to analyse a few or single integrated dumps, without
+ the need of slow theoretical variance calculations. (Only for the built-in
+ integration)
+-The use of the parameter "analysis_code" has been extended to control
+ what parts of the data to be analysed, which is useful in splitted and
+ sliced experiments. Can also be used for experiments run with several
+ modes, for example cp1.
+-Machinery for correction of gain variation to experiments containing
+ gain channels.
+-Numerous visible and hidden improvements and refinements
 
-Further information is or will be available at www.eiscat.com
+
+Default parameters
+
+In the analysis there are a number of parameters extracted from the data.
+Which parameters depends on the experiment, altitude and radar. The default
+settings given below can be overridden by the "fit_altitude" parameter.
+
+			UHF (930 MHz)	VHF (224 MHz)	ESR (500 MHz)
+Electron density	All heights	All heights	All heights
+Ion temperature		Above 80 km	Above 100 km	Above 90 km
+Temperature ratio	107-1500 km	120-1500 km	113-1500 km
+Collision frequency	90-107 km	Never		Never
+Ion drift velocity	All heights	All heights	All heights
+Ion composition		Never		Never		Never
+
+
+Further information and bugfixes can be found at www.eiscat.com
+
+Good gup!
