--- a/README
+++ b/README
@@ -1,87 +1,93 @@
-GUISDAP 8.5
+GUISDAP 8.6
 
-This release of guisdap contains several new features and bugfixes,
-but everything is made compatible with older versions (hopefully).
-The package should be compatible with Matlab versions higher then 6.5,
-but there may (or may not) be some problems on specific platforms.
+This release of guisdap contains several new features and bugfixes, but
+everything is made compatible with older versions (hopefully). The package
+should be compatible with Matlab versions higher then 6.5, but there may (or
+may not) be some problems on specific platforms.
 
 Install
-Guisdap-8.5 has been succesfully installed on Solaris and
-linux, and the makefiles are written for those systems.
-Other architectures may have to change the makefiles, if you want speed,
-othervise it should run without the compiled routines. On Windows
-systems it is recommended to run under the cygwin environment for
-best compabilitiy.
-Please report any changes needed for other systems.
+
+Guisdap-8.6 has been succesfully installed on Solaris and linux, and the
+makefiles are written for those systems. Other architectures may have to change
+the makefiles, if you want speed, othervise it should run without the compiled
+routines. On Windows systems it is recommended to run under the cygwin
+environment for best compabilitiy. Please report any changes needed for other
+systems.
 
 untar the distribution at your favourite place
 cd into the guisdap directory
 if you want the speed improvements the mex utility provides:
  make "lib" and "mex7" (or "mex6") directories
- cd models/iri2001
+ cd models/iri2007
  "make" (should be gnu-make)
  cd ../nrlmsise00
  "make"
+ cd ../onera
+ make OS=... ENV=... all
  cd ../../mexsources
  "make"
+
 make a link of bin/guisdap to a place on your path (ex /usr/local/bin)
 
-Integration of historic KST data (not .mat format) is done using the
-Nigel Wade integration
-package which you have to install separately. Provided are paths to
-NW/mex6 for the mex files and NW/lib for the libraries.
-
-Provided is also a searchpath to ~/gup/mygup where your personal
-and edited distribution files should go.
+Provided is a searchpath to ~/gup/mygup where your personal and edited
+distribution files should go.
 
 Running
 
-At the prompt, type "guisdap --help" to see all the switches available.
-Normal analysis is done running "guisdap -a" which will bring up a
-window with some entries to fill in. (Hopefully selfexplained)
-This is the same as "guisdap" and then "analyse". When finished hit "GO".
-A more detailed instruction can be found pressing the '?' button.
+At the prompt, type "guisdap --help" to see all the switches available. Normal
+analysis is done running "guisdap -a" which will bring up a window with some
+entries to fill in. (Hopefully selfexplained) This is the same as "guisdap" and
+then "analyse". When finished hit "GO". A more detailed instruction can be found
+at http://www.eiscat.se:8080/raw/GUISDAP/doc/howto.html.
+
+There is also a course presentation describing how to initialise new experiments
+and some useful tips on more specialised analysis. The initialisation scripts
+are avaiable with "guisdap -i".
 
 New features
 
-For experiments with multiple versions, such as manda and steffe, GUISDAP now
-accepts them with the same name. If the automatic version selection fails the
-initialisation to choose can be controlled by the analysis_rcprog parameter.
-Analysis on the web directly from our data base follows more or less the
-gfd setup. With that one does not need to download massive amounts of raw data
-and a matlab license or a guisdap installation. Also the running version of
-GUISDAP is used with the latest enhancements. The result files, plots and
-outputs are sent to the given email.
-Satellite checking has been improved to cut out the affected ranges instead of
-skipping the whole preintegrated dump. This feature is the default on some
-experiments and can be controlled by the boolean a_satch.cut.
-Short lags can be used for the raw density estimates via the tuning parameter
-analysis_ppshortlags.
-The matlab result files also includes range resolution, r_w. Added to the power
-profiles are range and statistical resolutions, r_ppw and r_pperr. A signature,
-name_sig, shows on what machine and when the analysis were made.
-The fit_altitude parameter have been extended to also control the physical
-limits for the parameters and how each parameter are fitted, linearly or
-logaritmic or hyperbolic.
+* Vector velocity extractions have been added. One specifies 'volumes' in UT
+  time, invariant latitude and altitude, for the supplied data. The data can be
+  mono-, bi-, or multistatic. All individual ion velocity measurements within
+  this volume together with possible constraints on vertical or field aligned
+  velocities are used to derive full vectors. The vector is in geographic
+  orientation, but since the full covariance matrix is calculated, it can be
+  easily be correctly rotated into geomagnetic coordinates. A wrapper,
+  velocity_wrapper.m, contains velocity setups for different CP combinations.
+* There has been a need for getting spectra from the lag profiles most
+  experiments contain. Previosly there have been the inversion possiblity from
+  lagprofiles to spectra taking care of the receiver and transmitter effects.
+  However, the inversion needs careful adjustment at the desired height to
+  produce a good spectrum. Now, also a forward method have been added, like
+  the RTG displays, but more accurate. This can be enabled by the boolean
+  display_spectra.
+* A number of new experiments have been added, different site versions of beata
+  and folke. Some of the beata experiments contain time slices of short lags to
+  be used as high resolution profiles. To analyse profiles like this, a
+  parameter have been added, analyse_pponly, to separate spectra and power
+  analysis.
+* For demanding experiments like tau7 and tau8, with relatively high sampling
+  rates, and producing many lags, the analysis can be speeded up by gating the
+  lagprofiles before fitting. This is controlled with analyse_gating, to be set
+  to either 1 or 2 for different gating strategy. The normal case would be 2.
+* Numerous hidden improvements and refinements
 
--Numerous improvements and refinements
- Back to individual freq/channel properties
- Redone gaincurve
- d_saveint is now a struct: .dir as before, .var for saving variances or not
- Display also satellite position, longer timeout in RT
- Introduce a_intfixforce
- Get max vizu dy from resolutions
- Landscape vizu plot
- New renderer for calib_pl_ne
- Show plasma line spec in calibration
- Use waveguide power for VHF from 2007 default
- Better control of pp handling
- Added taro beataT, enabling vc's without transmission
- Adding site=P + steffe_P
- Display the used analysis parameters with display_analysis_pars
- ...
+  - Allow adjustment of polynomial length in calib_ne
+  - Move plasma defs to exps dir
+  - added analysis_sweep wrapper
+  - Enable other plfreqs
+  - Give NaN to shorten arrays in minput
+  - Read errors also from madrigal for vel calcs
+  - Spear gate
+  - Added a genereric lpg_rep to repete several blocks
+  - Updates for eiscat3d tau8
+  - Added max_ppw parameter
+  - Decimated offppd estimate
+  - Allow for amp mod codes in radar_eq
+  - Make zoomed web plots more default
+  - 2008b needs jvm, allow overrides in scan setups
+  - ...
 
-Further information and bugfixes can be found at www.eiscat.se
+Further information can be found at www.eiscat.se.
 
-Go on gupping!
-Ingemar Häggström
+Ingemar Häggström.
