--- a/README
+++ b/README
@@ -9,8 +9,10 @@ Install
 
 Guisdap-10.0 is more-or-less platform independent, and is running on
 Linux/iOS/Windows. The software is available in
-https://github.com/ingemarh/guisdap, either as a git repository or ready made
-deb packages,
+https://github.com/ingemarh/guisdap or https://gitlab.com/ingemarh/guisdap,
+as git repositories with the large file system (lfs). To get it, install git
+and git-lfs on linux or mac. For windows, https://gitforwindows.org is a good
+option. Guisdap is also available as ready made deb packages,
 deb [trusted=yes] https://sourceforge.net/projects/guisdap/files/deb-repo/ bookworm main
 The libraries contain up-to-date ionospheric, atmospheric and magnetic models
 and can either be installed as the .deb repo (libguisdap) , or made optimised
@@ -43,5 +45,5 @@ New features
     Numerous bugfixings and updates
 
 Contacts
-Ingemar Häggström, Anders Tjulin, Maria Mihalikova
+Ingemar Häggström, Anders Tjulin, Maria Tjulin
 
